<resources>
    <string name="app_name">Langgan Seller</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="product">Product</string>
    <string name="customers">Customer</string>
    <string name="delivery">Delivery</string>
    <string name="staff">Staff</string>
    <string name="reviews">Reviews</string>
    <string name="settings">Settings</string>
    <string name="order">Order</string>
    <string name="store">Store</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_store_name">Store name</string>
    <string name="connection_not_available">Connection is not available</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="empty_result">Data is empty</string>
    <string name="box">Box</string>
    <string name="save">Save</string>
    <string name="new_product">New Poduct</string>
    <string name="add_photo">Add photo</string>
    <string name="photos">Photos</string>
    <string name="price">Price</string>
    <string name="descriptions">Descriptions</string>
    <string name="brand">Brand</string>
    <string name="sku">SKU</string>
    <string name="product_name">Product name</string>

    <string name="delete_messages">Are you sure to delete <b>%1$s</b> ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="box_name">Box Name</string>
    <string name="products">Products</string>
    <string name="add_products">Add products</string>
</resources>
